Fixed double scrollbar inside dropdowns when browser window is zoomed in

--- a/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -233,6 +233,7 @@
 .confirmation-dialog {
   width: 700px;
   z-index: @z-index-modal-dialog + 2;
+  padding-top: 0;
 
   .question {
     font-size: 14px;
