--- a/src/main/resources/assets/admin/common/styles/api/ui/selector/combobox/combobox.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/selector/combobox/combobox.less
@@ -56,7 +56,6 @@
 
   .grid {
     width: 100% !important;
-    overflow-y: auto !important;
   }
 
   .options-container {
